# hyprfresh

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  uninstall.sh
.hive/: issues.jsonl  memories.jsonl
config/: hyprfresh.toml
screensavers/shaders/: blank.wgsl  common.wgsl  matrix.wgsl  plasmula.wgsl  starfield.wgsl
src/: config.rs  idle.rs  ipc.rs  main.rs  renderer.rs
src/screensavers/: blank.rs  matrix.rs  mod.rs  plasmula.rs  starfield.rs
systemd/: hyprfresh.service
